--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version:'2.2.7.RELEASE'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+
+    compile group: 'com.google.guava', name: 'guava', version:'20.0'
 }
